--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     text-align: center;
     font-family: "Arial";
-    color: #333;
+    color: red;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -11,8 +11,7 @@ body
 #container
 {
     width: 70%;
-    padding: lem;
-    text-align: left;
+z    text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
